fix z-index

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,11 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: stretch;
+  z-index: 2;
 }
 .dropdown {
   display: none;
+  position: relative;
 }
 @media screen and (min-width: 980px) {
   .inner-link {
@@ -73,11 +75,11 @@ nav {
 .dropdown-content {
   display: none;
   position: absolute;
+
   top: 40px;
   background-color: white;
   min-width: 160px;
   /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
-  z-index: 1;
 }
 
 /* Links inside the dropdown */
@@ -230,19 +232,26 @@ h2 {
   border-radius: 2%;
   width: 30%;
   min-width: 300px;
+  padding-bottom: 0.5em;
 }
 .job td:nth-child(1) {
   width: 1.5em;
 }
+.job h3 {
+  position: relative;
+  z-index: 1;
+}
 .job h3::after {
   content: "";
   display: block;
-  position: relative;
-  bottom: 0.5em;
+  position: absolute;
+  bottom: 0.1em;
   width: 50%;
-  height: 0.5em;
+  height: 0.3em;
   transform: skew(-12deg);
   background: rgba(122, 178, 211, 0.5);
+  /* top: 3em; */
+  z-index: 0;
 }
 .job tr:nth-child(1) {
   height: 4em;
@@ -252,6 +261,9 @@ h2 {
 .job tr:nth-child(4) {
   height: 2em;
   text-decoration: underline;
+}
+.job tr:nth-child(5) td {
+  padding-top: 1em;
 }
 .job img {
   display: inline-block;
@@ -316,6 +328,8 @@ article a {
 }
 .contact-wrapper form,
 .contact-wrapper > ul {
+  display: flex;
+  flex-direction: column;
   width: 50%;
   min-width: 300px;
 }
@@ -323,13 +337,14 @@ article a {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 90%;
 }
 .field input {
-  width: 80%;
+  width: 100%;
   height: 2.5em;
 }
 .field textarea {
-  width: 80%;
+  width: 100%;
 }
 .actions input {
   font-size: 1.5em;
